# subnets-tracker

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  vpc-visualizer-demo.html  vpc-visualizer-multi.html  vpc-visualizer-vpc-08e75a391e87311dc.html
docs/superpowers/plans/: 2026-05-15-all-vpcs-cli-report.md
docs/superpowers/specs/: 2026-05-15-all-vpcs-cli-report-design.md
src/aws_subnet_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/subnet_tracker/: __init__.py  cli.py  tracker.py  visualizer.py
tests/: test_cli.py  test_tracker.py  test_visualizer.py
