[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-subnet-tracker"
version = "0.1.0"
description = "A read-only CLI tool to discover and analyze AWS VPC subnets."
requires-python = ">=3.9"
dependencies = [
    "boto3",
    "click",
    "rich"
]

[project.scripts]
subnet-tracker = "subnet_tracker.cli:main"
